# polaris

./: README.md  apriltag_worker.py  apriltagmap.json  config.json  local_publish.py  main.py  objdetect_worker.py  pyproject.toml
calibration/: CalibrationSession.py
config/: ConfigSource.py  config.py
output/: StreamServer.py  VideoWriter.py
pipeline/: Capture.py  FiducialDetector.py  ObjectDetector.py
